[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koladapy"
version = "1.0.0"
authors = [
    {name = "Emanuel Raptis", email = "emanuelraptis@gmail.com"},
]
description = "A Python wrapper for the Kolada API v3 (Swedish municipalities data)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
license-files = ["LICENSE"]

keywords = ["kolada", "api", "sweden", "municipalities", "data", "statistics"]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.1.0",
    "tqdm>=4.50.0",
    "backoff>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0"
]

[project.urls]
Homepage = "https://github.com/xemarap/koladapy"
Documentation = "https://github.com/xemarap/koladapy/blob/main/README.md"
Repository = "https://github.com/xemarap/koladapy"
"Bug Tracker" = "https://github.com/xemarap/koladapy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["koladapy*"]
exclude = ["tests*"]