[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koladapy"
version = "1.0.0"
authors = [
    {name = "Emanuel Raptis", email = "emanuelraptis@gmail.com"},
]
description = "A Python wrapper for the Kolada API v3 (Swedish municipalities data)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["kolada", "api", "sweden", "municipalities", "data", "statistics"]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.1.0",
    "tqdm>=4.50.0",
    "backoff>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0"
]

[project.urls]
Homepage = "https://github.com/xemarap/koladapy"
Documentation = "https://github.com/xemarap/koladapy/blob/main/README.md"
Repository = "https://github.com/xemarap/koladapy"
"Bug Tracker" = "https://github.com/xemarap/koladapy/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["koladapy*"]
exclude = ["tests*"]